# ROSLog

./: README.md
logger/: CMakeLists.txt  package.xml
logger/config/: params.yaml
logger/include/: logger_node.h
logger/inlcude/: logger_node.h
logger/launch/: logger.launch
logger/src/: logger_node.cpp
src/logger/: CMakeLists.txt
src/logger/launch/: logger.launch
src/logger/src/: logger_node.cpp
